[gd_scene load_steps=3 format=3 uid="uid://bhjdvn5b5wrn5"]

[ext_resource type="Script" path="res://src/ui/upgrade_selection/upgrade_card_ui.gd" id="1_abc123"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="UpgradeCardUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -480.0
custom_minimum_size = Vector2(160, 200)
script = ExtResource("1_abc123")

[node name="CardBackground" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="RarityIndicator" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_bottom = 20.0
color = Color(0.8, 0.8, 0.8, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="Icon" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
texture_filter = 0
expand_mode = 3
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "升级名称"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "升级描述文本"
autowrap_mode = 2
vertical_alignment = 1